Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Thu Dec 21 2006 - 0.3.6
- cobbler no longer restarts httpd if the config file already exists.
- "cobbler repo sync" is now an alias for "cobbler reposync"
- "cobbler list --something" can now be invoked as "cobbler something list"
- "cobbler list" just shows names of items now
- "cobbler report" is now used for showing full information output
- "list" (as well as report) are now sorted alphabetically

* Wed Dec 20 2006 - 0.3.5
- Fixed bug in cobbler import related to orphan detection
- Made default rsync.exclude more strict (OO langpacks and KDE translation)
- Now runs createrepo during "cobbler import" to build more correct repodata
- Added additional repo mirroring commands:  "cobbler repo add", etc
- Documentation on repo mirroring features.
- fix bug in rsync:// import code that saved distributions in the wrong path
- The --dryrun option on "cobbler sync" is now unsupported.
- Fixed bug in virt specific profile information not being used with koan
- import now takes --name in addition to --mirror-name to be more consistant
- rsync repo import shouldn't assume SSH unless no rsync:// in mirror URL
- strict host key checking disabled for "cobbler enchant" feature

* Mon Dec 05 2006 - 0.3.4
- Don't rsync PPC content or ISO's on cobbler import
- Manpage cleanup

* Tue Nov 14 2006 - 0.3.3
- During "cobbler sync" only PXE-related directories in /tftpboot
  are deleted.  This allows /tftpboot to be used for other
  purposes.

* Thr Oct 25 2006 - 0.3.2
- By default, boot and install in text mode

* Wed Oct 25 2006 - 0.3.1
- The app now refers to "virt" in many places instead of "xen".
  It's been coded such that files will migrate forward without
  any major issues, and the newer version of koan can still hit
  older releases (for now).  The CLI still takes the --xen options
  as well as the new --virt options, as they are aliased.  The API